# 2021_GROUP_25

./: .gitignore  .gitignore.cmd  .txt  CMakeLists.txt  Doxyfile  Material.cpp  README.md  TEAM.md  annotated.html  cell_8cpp.html  cell_8hpp.html  cell_8hpp_source.html  class_cell-members.html  class_cell.html  class_current_s_t_l-members.html  class_current_s_t_l.html  class_hexahedron-members.html  class_hexahedron.html  class_main_window-members.html  class_main_window.html  class_material-members.html  class_material.html  class_matrix3x3-members.html  class_matrix3x3.html  class_model-members.html  class_model.html  class_pyramid-members.html  class_pyramid.html  class_recent_s_t_l-members.html  class_recent_s_t_l.html  class_tetrahedron-members.html  class_tetrahedron.html  class_vector3d-members.html  class_vector3d.html  classes.html  classtabcontent-members.html  classtabcontent.html  currentstl_8cpp.html  currentstl_8h.html  currentstl_8h_source.html  (+35 more)
.github/workflows/: cmake-test.yml  doxygen-deploy.yml
A_combined/: CMakeLists.txt  TODO.txt  currentandrecentstl.cpp  currentandrecentstl.h  currentstl.cpp  currentstl.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentstl.cpp  recentstl.h  tabcontent.cpp  tabcontent.h
ModelViewer/: CMakeLists.txt  TODO.txt  currentstl.cpp  currentstl.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentstl.cpp  tabcontent.h  tabcontent.ui
ModelViewer/images/: Documentation.html
ModelViewer/installerfiles/files/: ExampleModel1.mod
ModelViewer/installerfiles/model_library/: CMakeLists.txt  cell.cpp  cell.hpp  material.cpp  matrix.cpp  model.hpp
afolabi_ind/Exercise3/: mainwindow.cpp  mainwindow.cpp.save-failed  mainwindow.h  mainwindow.ui
afolabi_ind/Moving models/: mainwindow.cpp  mainwindow.h  mainwindow.ui
executables/: modelTestProgram.cpp
laith_ind/: CMakeLists.txt  Doxyfile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tabcontent.cpp  tabcontent.ui
model_files/: saveFile.mod
model_library/: A-coding_consistency.txt  CMakeLists.txt  cell.cpp  cell.hpp  material.cpp  material.hpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  testProgram.cpp  vector.cpp  vector.hpp
model_viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
model_viewer/copy_of_model_library/: CMakeLists.txt
model_viewer/copy_of_model_library/model_library/: CMakeLists.txt  cell.cpp  cell.hpp  material.cpp  material.hpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  vector.cpp  vector.hpp
model_viewer/copy_of_model_library/test_programs/: CMakeLists.txt  testProgram.cpp
proprietary_files/: saveFile.mod  testFile.mod
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+8 more)
src/: A-coding_consistency.txt  CMakeLists.txt  cell.cpp  cell.hpp  material.cpp  material.hpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  vector.cpp  vector.hpp
temp_Best_group_contribution/: New Text Document.txt
temp_Best_group_contribution/Exercise3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.save-failed  mainwindow.ui
test_programs/: CMakeLists.txt  modelTestProgram.cpp  testProgram.cpp
vector_files/: dotcross.cpp  vector.cpp  vector.h
